meja/tests/list_weak_variable.stderr
File "tests/list_weak_variable.meja", line 3, characters 8-12:
Error: Unbound constructor true.
